--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@ui-kitten/components": "^5.1.2",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
+    "lodash": "^4.17.21",
+    "native-base": "^3.4.12",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
+    "react-native-paper": "^5.0.0-rc.4",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-svg": "^12.3.0",
+    "react-native-web": "~0.18.7",
+    "@expo/vector-icons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash": "^4.14.182",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "typescript": "~4.3.5"
